hermes_fuzz_executed/fuzz_26_execution
'use strict';
const obj = { x: 0, y: 1 };
function createA() {
    const x = 1;
    const y = 2;
    return { x, y };
}
let [x, y];
x = obj.x;
y = obj.y;
x = createA().x;
y = createA().y;
const [xProp] = obj.x;
const [xProp, yProp] = x;

console.log(xProp);

console.log(x, y);

console.log(xProp, yProp);

console.log('done');
 
 

 


Execution Output ------------------:
test.js:8:5: error: destucturing declaration must be initialized
let [x, y];
    ^~~~~~
